fixed z-index of exploer and navbar btns

--- a/frontend/src/components/Navigation/Navigation.css
+++ b/frontend/src/components/Navigation/Navigation.css
@@ -48,6 +48,7 @@
   color: black;
   text-decoration: none;
   padding: 6px;
+  width: 7rem;
 }
 
 .nav-btn:hover{
